Stretch goals: Fixed Navigation Bar, Animations on Navigation bar, Page Title, and Main content images.

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,68 @@
+@keyframes imageOneFloat {
+  0% {
+    transform: translate3d(529px, 0px, 100px);
+    opacity: 0;
+  }
+  50% {
+    transform: translate3d(265px, 100px, 100px);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translate3d(0, 0, 100px);
+    opacity: 1;
+  }
+}
+@keyframes imageTwoFloat {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes imageThreeFloat {
+  0% {
+    transform: translate3d(-529px, 0, 100px);
+    opacity: 0;
+  }
+  50% {
+    transform: translate3d(-265px, -100px, 100px);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translate3d(0, 0, 100px);
+    opacity: 1;
+  }
+}
+@keyframes rocketLaunch {
+  0% {
+    transform: translateY(529px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes navigationDropIn {
+  0% {
+    transform: translateY(-200px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes titleSlideIn {
+  0% {
+    transform: translateX(-2000px);
+  }
+  75% {
+    transform: translateX(100px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -165,21 +230,45 @@ nav {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  animation: navigationDropIn 1s;
   width: 100%;
   height: 120px;
-  background: #F6F6F6;
+  background: rgba(248, 248, 248, 0.9);
   font-family: #454A59;
   border: #F1F1F1;
+  position: fixed;
 }
 nav h1 {
+  animation: titleSlideIn 1.8s;
   font-size: 4.2rem;
-  padding-bottom: 30px;
+  padding: 10px 0 30px;
 }
-nav a {
+nav .navButtons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  height: 150px;
+  width: 100%;
+}
+nav .navButtons a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.7);
   font-size: 1.5rem;
-  padding: 20px;
+  padding: 5px 20px;
+  margin: 0 10px;
+}
+nav .navButtons a:hover {
+  transform: scale(1.1);
+  transition: all 0.3s;
+  background-color: rgba(0, 34, 99, 0.2);
+  border-radius: 2px;
+  border-bottom: 2px solid rgba(0, 34, 99, 0.6);
+}
+@media (max-width: 500px) {
+  nav .navButtons a {
+    margin: 0;
+  }
 }
 footer {
   color: #22283B;
@@ -196,6 +285,9 @@ footer {
     width: 95%;
     margin: 0 auto;
   }
+}
+.home {
+  padding-top: 120px;
 }
 .home .intro .headerImg {
   width: 100%;
@@ -218,9 +310,19 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+.home .space-images .blast {
+  animation: imageOneFloat 1.8s;
+}
+.home .space-images .sky {
+  animation: imageTwoFloat 3s;
+}
+.home .space-images .launch {
+  animation: imageThreeFloat 1.8s;
+}
 @media (max-width: 500px) {
   .home .space-images .blast {
     width: 95%;
+    animation: rocketLaunch 1.5s;
   }
   .home .space-images .sky {
     display: none;
