--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,21 +1,43 @@
 // Navigation code here
 nav {
     .center(center, center, column);
+    animation: navigationDropIn 1s;
     width: 100%;
     height: 120px;
-    background: @wild-sand;
+    background: rgba(248, 248, 248, .9);
     font-family: @river-bend;
     border: @sea-shell;
+    position: fixed;
 
     h1 {
+        animation: titleSlideIn 1.8s;
         font-size: 4.2rem;
-        padding-bottom: 30px;
+        padding: 10px 0 30px;
     }
 
-    a {
-        text-decoration: none;
-        color: rgba(0, 0, 0, .7);
-        font-size: 1.5rem;
-        padding: 20px;
+    .navButtons {
+        .center(center, center, row);
+        height: 150px;
+        width: 100%;
+
+        a {
+            text-decoration: none;
+            color: rgba(0, 0, 0, .7);
+            font-size: 1.5rem;
+            padding: 5px 20px;
+            margin: 0 10px;
+        
+            &:hover {
+                transform: scale(1.1);
+                transition: all .3s;
+                background-color: @link-bg-color;
+                border-radius: 2px;
+                border-bottom: 2px solid @link-border-color;
+            }
+
+            @media @phone {
+                margin: 0;
+            }
+        }
     }
 }
